fix multiselect bar being too short on big displays

--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -103,7 +103,7 @@ table td {
 }
 table th#headerName {
 	position: relative;
-	width: 100em; /* not really sure why this works better than 100% … table styling */
+	width: 9999px; /* not really sure why this works better than 100% … table styling */
 	padding: 0;
 }
 #headerName-container {
